# sofie-benchmarks

./: .gitignore  CMakeLists.txt  README.md
atlas_gnn/: gnn_small.onnx  parse_tracking_model.C  run_ONNXRuntimeInference_model_tracking.cxx  run_inference_tracking_small.C
atlas_gnn2/: check_mem.h  parse_atlas_model.C  run_atlas_model.C  run_atlas_test
diffusion_model/: parse_cd_model.C  run_inference_cd.C
particlenet/: run_ONNXRuntimeInference_particle_net.cxx  run_inference_particle_net.C  test_particle_net.C
